compiler-core/src/luau/tests/snapshots/gleam_core__luau__tests__smoke__assignments.snap
---
source: compiler-core/src/luau/tests/smoke.rs
expression: "\npub fn let_test() {\n  let a = 1\n  let b = 2\n  a + b\n}\n"
---
----- SOURCE CODE

pub fn let_test() {
  let a = 1
  let b = 2
  a + b
}


----- COMPILED LUAU
local function let_test()
  local a = 1
  local b = 2
  return a + b
end

return {
  let_test = let_test
}
