compiler-core/src/luau/tests/snapshots/gleam_core__luau__tests__smoke__case_statements.snap
---
source: compiler-core/src/luau/tests/smoke.rs
expression: "\npub fn run(x: Int) {\n  case x {\n    1 -> 2\n    2 -> 3\n    _ -> 0\n  }\n}\n\npub type Option(a) {\n  Some(value: a)\n  None\n}\n\npub fn map(opt: Option(Int)) {\n  case opt {\n    Some(val) -> val + 1\n    None -> 0\n  }\n}\n"
---
----- SOURCE CODE

pub fn run(x: Int) {
  case x {
    1 -> 2
    2 -> 3
    _ -> 0
  }
}

pub type Option(a) {
  Some(value: a)
  None
}

pub fn map(opt: Option(Int)) {
  case opt {
    Some(val) -> val + 1
    None -> 0
  }
}


----- COMPILED LUAU
local Some = function(value)
  return {
    tag = "Some",
    value = value
  }
end

local None = { tag = "None" }

local function run(x)
  return (function()
    local _subject_0 = x
    if _subject_0 == 1 then
    
      return 2
    elseif _subject_0 == 2 then
    
      return 3
    elseif true then
    
      return 0
    end
  end)()
end

local function map(opt)
  return (function()
    local _subject_0 = opt
    if _subject_0.tag == "Some" then
    
      local val = _subject_0.arg_0
      return val + 1
    elseif _subject_0.tag == "None" then
    
      return 0
    end
  end)()
end

return {
  Some = Some,
  None = None,
  run = run,
  map = map
}
