compiler-core/src/luau/tests/snapshots/gleam_core__luau__tests__smoke__externals.snap
---
source: compiler-core/src/luau/tests/smoke.rs
expression: "\n@external(luau, \"my_mod\", \"my_func\")\npub fn module_fn(a: Int) -> Int\n\n@external(luau, \"my_mod\", \"my_func\")\npub fn module_fn2(a: Int) -> Int {\n  a\n}\n\n@luau.property(\"Name\")\npub fn get_name(a: a) -> String\n\n@luau.set_property(\"Name\")\npub fn set_name(a: a, b: String) -> a\n\n@luau.method(\"Destroy\")\npub fn destroy(a: a) -> Nil\n\n@luau.method(\"Clone\")\npub fn clone(a: a) -> a\n\n@luau.event(\"Changed\")\npub fn changed(a: a) -> a\n\n@luau.global(\"print\")\npub fn print(a: a) -> Nil\n\npub fn use_them(x) {\n  module_fn(1)\n  module_fn2(2)\n  get_name(x)\n  set_name(x, \"hello\")\n  destroy(x)\n  clone(x)\n  changed(x)\n  print(x)\n}\n"
---
----- SOURCE CODE

@external(luau, "my_mod", "my_func")
pub fn module_fn(a: Int) -> Int

@external(luau, "my_mod", "my_func")
pub fn module_fn2(a: Int) -> Int {
  a
}

@luau.property("Name")
pub fn get_name(a: a) -> String

@luau.set_property("Name")
pub fn set_name(a: a, b: String) -> a

@luau.method("Destroy")
pub fn destroy(a: a) -> Nil

@luau.method("Clone")
pub fn clone(a: a) -> a

@luau.event("Changed")
pub fn changed(a: a) -> a

@luau.global("print")
pub fn print(a: a) -> Nil

pub fn use_them(x) {
  module_fn(1)
  module_fn2(2)
  get_name(x)
  set_name(x, "hello")
  destroy(x)
  clone(x)
  changed(x)
  print(x)
}


----- COMPILED LUAU
local module_fn = require("my_mod").my_func

local module_fn2 = require("my_mod").my_func

local function get_name(a)
return a.Name
end

local function set_name(a, b)
a.Name = b
return a
end

local function destroy(a)
return a:Destroy()
end

local function clone(a)
return a:Clone()
end

local function changed(a)
return a.Changed
end

local print = print

local function use_them(x)
  module_fn(1)
  module_fn2(2)
  x.Name
  (function() local _x = x; _x.Name = "hello"; return _x end)()
  x:Destroy()
  x:Clone()
  x.Changed
  return print(x)
end

return {
  module_fn = module_fn,
  module_fn2 = module_fn2,
  get_name = get_name,
  set_name = set_name,
  destroy = destroy,
  clone = clone,
  changed = changed,
  print = print,
  use_them = use_them
}
